# scim_docker

./: .gitignore  .gitmodules  README.m  README.md  bibtex.bib  example.md  init.sh  readme.sh
docker/: .gitattributes  .ignore_sergeicu  Dockerfile  Dockerfile_from_scratch  Dockerfile_scim_base  READ.md  README.md  how_test_quickly_build_and_test_docker.txt  libs.tar  ubuntu_to_centos_dependencies.sh
docker/scim_cpp/dwi_bootstrap/: CMakeCache.txt  CMakeLists.txt  README.md
docker/scim_cpp/dwi_bootstrap/MCV_model_selection/: mvcModelSelection.cpp
docker/scim_cpp/dwi_bootstrap/computeTRACEW/: itkModelToTraceWImageFilter.h
docker/scim_cpp/dwi_bootstrap/include/: #itkIVIMModelFitFilter.txx#  itkADCMLECostFunction.h  itkBValuesToVectorImageFilter.txx  itkDiffusionModelFittingMLECostFunction.h  itkDiffusionModelFittingSmoothedMLECostFunction.txx  itkIVIMBootstrapProposalFilter.txx  itkIVIMGradientDecentMRFModelFitIterFilter.h  itkPerfusionCoeffCostFunction.txx  itkRicianNoiseCalculator.txx
docker/scim_cpp/dwi_bootstrap/ivimFBMMRFEstimator/: ivimFBMMRFEstimator.cpp
docker/scim_cpp/dwi_bootstrap/ivimFBMinvivoSE/: #ivimFBMinvivoSE.cpp#
docker/scim_cpp/dwi_bootstrap/modelFitToSamples/: data.txt  modelFitToSamples.cpp  point_6.txt
docker/scim_cpp/dwi_bootstrap/simulateBS/: simulateBS.cpp
docker/scim_cpp/dwi_bootstrap/tests/: README_COPIED_HERE.txt  calculate_rician.py  run_allslices_patient2.sh  run_allslices_patient3.sh  run_patient2.sh  run_patient3.sh  run_test_patient2.sh  run_test_patient2_scim.sh  run_test_patient3.sh  run_test_patient3_scim.sh
docker/scim_cpp/dwi_bootstrap/tests/patient2/: bvalsFileNames_average.txt  bvalsFileNames_average_local.txt
docker/scim_cpp/dwi_bootstrap/tests/patient3/: bvalsFileNames_average.txt
docker_v1/: Dockerfile  Dockerfile_copy_binaries  Dockerfile_from_source  build.sh  docker_run_centos6.sh  ubuntu_to_centos_dependencies.sh
docker_v1/centos6_v2/: Dockerfile  build.sh
docker_v1/misc/nvidiatest/: Dockerfile_hard  Dockerfile_simple  process.sh  repomd.xml.1
docker_v1/proxy_test/: Dockerfile  process.sh
docker_v1/scim_cpp/dwi_bootstrap/: .project
docker_v1/scim_cpp/dwi_bootstrap/averageBVals/: itkAverageSeriesImageFilter.txx
docker_v1/scim_cpp/dwi_bootstrap/computeTRACEW/: itkModelToTraceWImageFilter.txx
docker_v1/scim_cpp/dwi_bootstrap/include/: BvaluesParser.cpp  BvaluesParser.h  crlBodyDiffusionTools.h  itkBValuesToADCImageFilter.h  itkBValuesToADCImageFilter.txx  itkBValuesToVectorImageFilter.txx  itkDiffusionModelFittingCostFunction.h  itkDiffusionModelFittingCostFunction.txx  itkDiffusionModelFittingCostFunctionLS.txx  itkIVIMBootstrapProposalFilter.h  itkIVIMGradientDecentMRFModelFitIterFilter.txx  itkIVIMMRFMetricValue.h  itkIVIMMRFMetricValue.txx  itkIVIMMRFModelFitFBMImageFilter.txx  itkIVIMMRFModelFitICMImageFilter.txx  itkIVIMModelFitFilter.h  itkPerfusionCoeffCostFunction.h  itkVectorToScalarImageFilter.txx
docker_v1/scim_cpp/dwi_bootstrap/invivoBS/: invivoBS.cpp
docker_v1/scim_cpp/dwi_bootstrap/ivimCICMMRFEstimator/: ivimCICMMRFEstimator.cpp
docker_v1/scim_cpp/dwi_bootstrap/modelFitToSamples/: point_5.txt  point_7.txt  runDemo.sh
docker_v1/scim_cpp/dwi_bootstrap/simulateDWI/: itkModelToSimulatedDWImageFilter.txx
docker_v1/scim_cpp/dwi_bootstrap/tmpTest/: tmpTest.cpp
docker_v1/simple_copy/: Dockerfile  Dockerfile_base  Dockerfile_centos6_dev  Dockerfile_centos6_dev_w_vtk_itk_nlopt  Dockerfile_centos6_scim  Dockerfile_test  Dockerfile_ubuntu_crkit_scim  build.sh  copy_libs.sh  misc_notes.txt  process.sh  test_binary_on_file.sh
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/: .cproject  CMakeCache.txt
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/averageBVals/: averageBvals.cpp  itkAverageSeriesImageFilter.h
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/computeADC/: computeADC.cpp
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/computeTRACEW/: computeTRACEW.cpp
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/convertNRRD2VTK/: convertNRRD2VTK.cpp
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/include/: #crlBodyDiffusionTools.cpp#  crlBodyDiffusionTools.cpp  itkADCMLECostFunction.txx  itkBValuesToVectorImageFilter.h  itkDiffusionModelFittingCostFunctionLS.h  itkDiffusionModelFittingMLECostFunction.txx  itkDiffusionModelFittingSmoothedMLECostFunction.h  itkIVIMBootstrapProposalFilter.txx  itkIVIMBootstrapSignalFilter.h  itkIVIMBootstrapSignalFilter.txx  itkIVIMMRFModelFitCICMImageFilter.h  itkIVIMMRFModelFitCICMImageFilter.txx  itkIVIMMRFModelFitFBMImageFilter.h  itkIVIMMRFModelFitICMImageFilter.h  itkRicianNoiseCalculator.h  itkVectorToScalarImageFilter.h
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/ivimFBMinvivoSE/: ivimFBMinvivoSE.cpp
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/ivimMRFEstimator/: ivimMRFEstimator.cpp
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/modelFitTest/: modelFitTest.cpp
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/modelFitToSamples/: out.txt  point_1.txt  point_2.txt  point_3.txt  point_4.txt  point_8.txt
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/modelFitToSamples/figs/: D_h_leverage.eps
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/plotFittedModelForPoint/: plotFittedModelForPoint.cpp
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/rescaleRealToShort/: itkRescaleRealToShort.cxx
docker_v1/simple_copy/scim_cpp/dwi_bootstrap/simulateDWI/: itkModelToSimulatedDWImageFilter.h  simulateDWI.cpp
docker_v1/ubuntu_simon/: Dockerfile  build.sh
docker_v1/vtk/: Dockerfile  build.sh
example_data/: bvalsFileNames_average_local.txt
